--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     image: nginx:alpine
     container_name: kundelik_nginx
     volumes:
-      - ./nginx-app.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - static_volume:/app/staticfiles:ro
     ports:
       - "80:80"
