--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,14 +21,44 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    upstream django_app {
-        server web:8000;
+    upstream gradepredict {
+        server gradepredict:8000;
     }
 
     server {
         listen 80;
-        server_name _;
+        server_name neverhard.com;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+        location / {
+            return 301 https://$host$request_uri;
+        }
+}
+
+    server {
+        listen 443 ssl http2;
+        server_name neverhard.com;
+
+        ssl_certificate /etc/letsencrypt/live/neverhard.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/neverhard.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDH+AESGCM:ECDH+AES256:!MD5:!3DES:!AES128;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        
         charset utf-8;
+        # Favicon
+        location /favicon.ico {
+            alias /favicon.ico;
+            access_log off;
+            log_not_found off;
+            expires max;
+        }
 
         # Static files
         location /static/ {
@@ -46,12 +76,14 @@ http {
 
         # Main application
         location / {
-            proxy_pass http://django_app;
-            proxy_set_header Host $host;
+            proxy_pass http://gradepredict;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
             proxy_redirect off;
         }
     }
+    
 }
